# fastapi-firebase

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.cursor/rules/: status_codes.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/workflows/: test.yaml
app/: main.py
app/domain/: user.py
app/domain/models/: user_models.py
app/infrastructure/: __init__.py  database.py
app/infrastructure/orm/: __init__.py  user_orm.py
app/presentation/: dependency.py
migrations/: env.py
migrations/versions/: 092ef8c44f6a_initial_migration.py
tests/: test_health.py
