[project]
name = "fastapi-firebase"
version = "0.1.0"
description = "FastAPI API (Python 3.14) with Firebase Admin SDK"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "firebase-admin>=6.6.0",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.0",
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
